[project]
name = "ai-agent-workflow-builder"
version = "0.1.0"
description = "Define multi-step AI workflows with connected tools, run them locally, and inspect the logs."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
[tool.pytest.ini_options]
pythonpath = ["."]
